# pycounts_ic

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_ic/: plotting.py  pycounts_ic.py
tests/: test_pycounts_ic.py
