[tool.poetry]
name = "pycounts_ic"
version = "0.1.0"
description = "Calculate word counts in a text file."
authors = ["Ivo Camargo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
